# ue5-game-content-viewer

./: .gitignore  LICENSE  README.md  launch_ue.cmd  main.py  pyproject.toml  venv_install.cmd  venv_install.ps1
game_content_viewer/: game_content_viewer_main.py
game_content_viewer/game_content_utils/: config_example.py  config_file.py  convert_db_to_csv.py  db_operations.py
game_content_viewer/remote_utils/: send_to_unreal_port.py  test_send_to.py
game_content_viewer/unreal_scripts/: game_content_scanner.py  game_content_summary.py  game_content_thumbnails.py
support_files/Content/Python/: init_unreal.py  unreal_tcp_server.py
support_files/Plugins/ThumbnailExporter/: ThumbnailExporter.uplugin
support_files/Plugins/ThumbnailExporter/Content/: BP_ThumbnailExporter.uasset
support_files/Plugins/ThumbnailExporter/Source/ThumbnailExporter/: ThumbnailExporter.Build.cs
support_files/Plugins/ThumbnailExporter/Source/ThumbnailExporter/Private/: ThumbnailExporter.cpp
support_files/Plugins/ThumbnailExporter/Source/ThumbnailExporter/Public/: ThumbnailExporter.h
support_files/unreal_stubs/: generate_unreal_stubs.py
